added email register confirmation and changed gitignore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,11 @@ server.error.include-message=always
 server.error.include-status-code=always
 
 server.servlet.session.timeout=61s
+
+### Email Config
+mail.smtp.auth=true
+mail.smtp.host=smtp.gmail.com
+mail.smtp.starttls.enable=true
+mail.senderEmail=leagueopiniontest@gmail.com
+mail.senderPassword=lxbz mvpg cski jihe
+mail.smtp.port=587
