added championshipServiceTests and added opinionServiceTest testGetById

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ mail.smtp.starttls.enable=true
 mail.senderEmail=leagueopiniontest@gmail.com
 mail.senderPassword=lxbz mvpg cski jihe
 mail.smtp.port=587
+asdasd
