Account flow works

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ build/
 ### VS Code ###  notsure if works but should bock the API's
 .env
 /main/resources/application.properties
+**/application-cloud.properties
+.env.local
+.env.production
