--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/opinion_test
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+### JPA Configuration
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+### Error Handling
 server.error.include-message=always
 server.error.include-status-code=always
 
@@ -20,6 +26,9 @@ mail.smtp.starttls.enable=true
 mail.senderEmail=leagueopiniontest@gmail.com
 mail.senderPassword=lxbz mvpg cski jihe
 mail.smtp.port=587
+
+### Frontend URL
+frontend.url=http://localhost:5173
 
 ### JWT
 jwt:
